<resources>
    <string name="app_name">homework6</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_menu_feed">Лента</string>
    <string name="nav_menu_create_post">Создать</string>
    <string name="nav_menu_profile">Профиль</string>
    <string name="user_email">Почта пользователя</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="bio_tell_about_yourself">Расскажи о себе (необязательно)</string>
    <string name="register">Зарегистрироваться</string>
    <string name="user_name_enter">Придумайте имя пользователя</string>
    <string name="user_email_enter">Введите почту</string>
    <string name="user_password_enter">Придумайте пароль</string>
    <string name="topic_nature">Природа🌿</string>
    <string name="topic_art">Искусство🖼️</string>
    <string name="topic_cosmetics">Декоративная косметика💅</string>
    <string name="topic_sport">Спорт🏌️‍♀️</string>
    <string name="topic_food">Еда🍝</string>
    <string name="topic_choose">Выберите интересующую(-ие) вас тему(-ы)</string>
    <string name="topic_please_choose">Пожалуйста, выберите тему!</string>
    <string name="profile_interests">Интересы</string>
    <string name="new_post">Новый пост</string>
    <string name="new_post_header">Заголовок *</string>
    <string name="new_post_url_ref">Ссылка на картинку (URL)</string>
    <string name="new_post_text">Текст поста</string>
    <string name="login">Зарегистрироваться</string>
    <string name="choose_topics">Выберите темы (до 10):</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="add_comment">Написать комментарий</string>
    <string name="user">Пользователь</string>
    <string name="text_comment_here">Текст комментария здесь...</string>
    <string name="search_by_title_or_tags">Поиск по названию или тегам...</string>
    <string name="profile_log_out">Выйти из аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="profile_liked_posts">Понравившиеся посты</string>
</resources>