<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:padding="16dp"
    android:background="?android:attr/colorBackground">

    <!-- Поле для ввода Почты -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tilUserPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilBio"
        app:layout_constraintStart_toStartOf="@+id/tilBio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_enter"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для ввода Пароля -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/tilUserName"
        app:layout_constraintEnd_toEndOf="@+id/tilBio"
        app:layout_constraintStart_toStartOf="@+id/tilBio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_enter"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для ввода Имени пользователя -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tilBio"
        app:layout_constraintEnd_toEndOf="@+id/tilBio"
        app:layout_constraintStart_toStartOf="@+id/tilBio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_enter"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 3. Поле для ввода Bio -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bio_tell_about_yourself"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:maxLines="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 4. Заголовок для тем -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTopicsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/topic_choose"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tilBio"
        app:layout_constraintTop_toBottomOf="@+id/tilBio" />

    <!-- 5. Группа чипов -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTopics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="false"
        app:selectionRequired="true"
        app:layout_constraintEnd_toEndOf="@+id/tilBio"
        app:layout_constraintStart_toStartOf="@+id/tilBio"
        app:layout_constraintTop_toBottomOf="@+id/tvTopicsLabel">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNature"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_nature" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCosmetics"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_cosmetics" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipArt"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_art" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSport"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_sport" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFood"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_food" />
    </com.google.android.material.chip.ChipGroup>

    <!-- 6. Кнопка Регистрации -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="12dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/tilBio"
        app:layout_constraintStart_toStartOf="@+id/tilBio"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupTopics" />

</androidx.constraintlayout.widget.ConstraintLayout>