<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Заголовок экрана -->
    <TextView
        android:id="@+id/tvScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Поле: Автор -->
    <TextView
        android:id="@+id/tvAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreenTitle" />

    <!-- Поле: Заголовок -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/new_post_header"
        app:layout_constraintTop_toBottomOf="@id/tvAuthorLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле: Ссылка на картинку (Необязательно) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/new_post_url_ref"
        app:layout_constraintTop_toBottomOf="@id/tilTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле: Текст поста (Необязательно) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_post_text"
        app:layout_constraintBottom_toTopOf="@+id/btnCreatePost"
        app:layout_constraintTop_toBottomOf="@id/tilImageUrl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка создания -->
    <Button
        android:id="@+id/btnCreatePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_menu_create_post"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>