<?xml version="1.0" encoding="utf-8"?>

<!--Используем Констрейнт, как самый гибкий вариант -->
<!--"match_parent" - Зависит от родителя-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <!-- Контейнер для поля ввода "UserEmail".
         TextInputLayout добавляет красивые анимации для подсказок (hint) и отображение ошибок. -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Непосредственно само поле для ввода текста. -->
        <!-- id - уникальный идентификатор -->
        <!-- layout_width/height - Ширина зависит от родителя, высота от контента (может расширяться) -->
        <!--inputType - Вводить userEmail по готовому шаблону -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Контейнер для поля ввода "Пароль". -->
    <!-- toBottomOf - Верхняя граница до userEmail". -->
    <!-- toStartOf - Элемент начинается от родителя". -->
    <!-- toEndOf - Элемент начинается до родителя. -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_input_layout">

        <!-- Внутри теквтового контейнера элемент для ввода текста -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка "Войти" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        />

    <!-- Кнопка "Забыли пароль?" -->
    <!-- Стиль TextButton убирает фон и оставляет только текст -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/forgot_password"
        android:textColor="#6200EE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <!-- Кнопка "Зарегистрироваться" -->
    <!-- Стиль OutlinedButton создает рамку без заливки -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="#6200EE"
        app:strokeColor="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





    <!-- Добавлено при проблеме наслаивание последующего фрагмента -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_hello_anim" />

</androidx.constraintlayout.widget.ConstraintLayout>